--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -115,11 +115,11 @@ $colors: (
   src: url('../assets/fonts/Mitr/Mitr-Regular.ttf');
 }
 
-  h1, h2 , ion-card-title {
+  h1, h2 , ion-card-title ,ion-item-divider {
   font-family: "Open Sans" !important;
   }
 
-  p ,button , ion-title  {
+  p ,button , ion-title ,  {
     font-family: "Regular" !important;
   }
 
